# Project-MNU-OS

./: .gitignore  CMakeLists.txt  README.md  test_mun_os.sh  usage.md
config/: bg.json  bg2.json  example.json  test_precedence.json  test_sleep.json
configs/: alpine_test.json  background.json  basic.json  bg.json  custom_hostname.json  echo.json  env_test.json  example.json  fs_explore.json  full_security.json  high_memory.json  limited_pids.json  long_running.json  low_memory.json  minimal.json  multi_command.json  network_test.json  process_tree.json  quick_test.json  secure.json  shell.json  short_bg.json  stress_test.json  test.json
include/: CgroupManager.h  Config.h  ConfigParser.h  Include_INFO.md  NetworkManager.h  Process.cpp  Process.h  Security.h  StateManager.h  container.h
scripts/: create_service.sh  generate_test_configs.sh  manage_containers.sh  rootfs_setup.sh  run_all_tests.sh
src/: CgroupManager.cpp  ConfigParser.cpp  Container.cpp  NetworkManager.cpp  Security.cpp  StateManager.cpp  main.cpp
tests/: stage1.sh  stage1_core_isolation.json  stage2.json  stage2.sh  stage3.json  stage3.sh  test_exec.sh  test_runner.py
